--- a/arquitetura-css/index.html
+++ b/arquitetura-css/index.html
@@ -26,6 +26,16 @@
         <link rel="stylesheet" type="text/css" href="./assets/css/receita/receita-descricao.css">
         <link rel="stylesheet" type="text/css" href="./assets/css/receita/receita-titulo.css">
         <link rel="stylesheet" type="text/css" href="./assets/css/receitas.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/quemSomos/quemSomos.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/quemsomos/quemSomos-titulo.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/quemSomos/quemSomos-descricao.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/pessoas.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/pessoa/pessoa-funcao.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/pessoa/pessoa-nome.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/pessoa/pessoa-imagem.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/pessoa/pessoa.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/rodape.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/logo.css">
 
     </head>
     <body>
@@ -41,7 +51,7 @@
             </nav>
         </header>
         <section class="banner">
-            <img class="banner__imagem" src="./assets/img/banner.jpg">
+            <div class="banner__imagem" src="./assets/img/banner.jpg"></div>
             <h2 class="banner__titulo">Reaproveite melhor os alimento!</h2>
         </section>
         <section class="sobre">
@@ -98,8 +108,9 @@
                         <button class="receita__botao">Ver receita</button>
                     </div>
                 </div>
-            </section>
-            <section class="quem-somos">
+        </section>
+            
+        <section class="quem-somos">
                 <h3 class="quem-somos__titulo">Quem somos</h3>
                 <p class="quem-somos__descricao">Conheça a comunidade por trás da iniciativa</p>
                 <div class="pessoas">
@@ -119,6 +130,9 @@
                         <span class="pessoa__funcao">Pequena Produtora</span>
                     </div>
                 </div>
-            </section>
+        </section>
     </body>
+    <footer class="rodape">
+        Contato:exemplo@email.com.br
+    </footer>
 </html>
