--- a/site Uxunicornio/index.html
+++ b/site Uxunicornio/index.html
@@ -4,9 +4,334 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ux Unicórnio</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/custom.css">
+
 </head>
 <body>
+	<header>
+		<section>
+			<span>UX Unicórnio na estrada 2020</span>
+		
+			 
+	    <nav>
+		    <div class="nav-wrapper">
+		      <a href="#" class="brand-logo">Logo</a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="sass.html">Sass</a></li>
+		        <li><a href="badges.html">Components</a></li>
+		        <li><a href="collapsible.html">JavaScript</a></li>
+		      </ul>
+		    </div>
+	    </nav>
+
+		<nav>
+			<ul>
+				<li>Cidades e Datas</li>
+				<li>Conteúdo</li>
+				<li>Depoimentos</li>
+				<li>Cases de alunos</li>
+				<li>Whatsapp</li>
+			</ul>
+		</nav>
+		</section>	
+		<section>
+			<div>Curso Design de Produto focado em UX/UI</div>
+			<div>Destaque-se no mercado com conhecimentos em Experiência do Usuário, Estratégia de Negócios, Metodologias Ágeis, Design de Interfaces Web/App e Softskills.
+			</div>
+			<div>
+				<button>Lista de Espera</button>
+			</div>
+		</section>	
+	</header>
+	<section>
+		<div>Veja as datas da sua cidade</div>
+	</section>
+	<section class="cidades">
+		<div class="row">
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+
+	    	<div class="col s12 m6 xl13">
+	     		<div class="card">
+	        		<div class="card-image">
+			          <img src="images/sample-1.jpg">
+			          <span class="card-title">Nome da Cidade</span>
+	        		</div>
+	        		<div class="card-content">
+	          			<p>Valor</p>
+	        		</div>
+	        		<div class="card-action">
+	          			<a href="#">Lista de Espera</a>
+	        		</div>
+	      		</div>
+	    	</div>
+	  	</div>
+	</section>
+	<section class="ementa">
+		<div>O que você vai aprender em 2 dias intensos</div>
+		<div>Esse curso de 16h tem conteúdos inéditos e tudo que há de melhor em todos os meus 10 cursos online somados! É mitológico!</div>
+		<div>
+			<div class = "row" >
+				<div class="col s12 m6 l6 xl6 ">
+					<div> Estratégia de Negócio com foco no Usúario</div>
+					<ul>
+						<li>Emplacar UX na sua Empresa</li>
+						<li>Explorar problemas</li>
+						<li>Especializar-se no seu negócio</li>
+						<li>Aproximar-se de Stakeholders</li>
+						<li>Definir metas e medir resultados</li>
+					</ul>
+
+					<div> Design de Interfaces(UI)</div>
+					<ul>
+						<li>Organizar Grids</li>
+						<li>Entender e definir Hierarquia Visual</li>
+						<li>Criar paletas de cores com foco no funcional</li>
+						<li>Escolher tipografias com boa legitibidade e leiturabilidade</li>
+						<li>Criar botões que ajudam os usuários</li>
+						<li>Criar formulários mais fáceis de usar</li>
+					</ul>
+				</div>
+				<div class="col s12 m6 l6 xl6 ">
+					<div> Desing de Experiência de usuário(UX) </div>
+					<ul>
+						<li>Validar suposições com Usuários</li>
+						<li>Estudar as Jornadas e Contextos</li>
+						<li>Mapear seus potenciais usuários</li>
+						<li>Priorizar Alternativas de Soluções</li>
+						<li>Prototipar e testar com Usuários</li>
+					</ul>
+
+					<div> Gestão de Produto e Metodologias Ágeis </div>
+					<ul>
+						<li>Trabalhar em equipes ágeis</li>
+						<li>Trabalhar com Ux no SCRUM - ritos e papéis</li>
+						<li>Definir suposições e testar hipóteses LEAN UX</li>
+						<li>Gerenciar roadmap de produto</li>
+						<li>Organizar e acompanhar projetos</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="estatistica">
+		<div class = "row" >
+			<div class="col s12 m4 l4 xl4 ">
+				<div> +40.000 </div>
+				<div>Alunos</div>					
+			</div>
+
+			<div class="col s12 m4 l4 xl4 ">
+				<div> 51 </div>
+				<div>Países</div>					
+			</div>
+
+			<div class="col s12 m4 l4 xl4 ">
+				<div> +8000 </div>
+				<div>Avaliações 5</div>					
+			</div>
+
+		</div>				
+
+	</section>
 
 </body>
+ <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l5 s12">
+                <h5 class="white-text">UX Unicórnio</h5>
+                <p class="grey-text text-lighten-4">Ensinamos Ux e UI Design a melhorarem resultados de suas empresas e se destacarem em sua carreira entendendo o quea as pessoas precisam (Ux desing) e criando produtos funcionais, bonitos e que as pessoas desejam (UI Design)</p>
+              </div>
+              <div class="col l4 s12">
+                <h5 class="white-text">Os melhores cursos online</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Experiência do Usuário nos Negócios(11h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Design de Interfaces com o foco em UX (32h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Usabilidade com Hotjar(2h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Prototipação e Styleguides em Figma (6h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Ver todos os cursos</a></li>
+                </ul>
+              </div>
+              <div class="col l3 s12">
+                <h5 class="white-text">Conteúdo grátis</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Insta e Stories @uxunicornio</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Youtube UX Unicórnio</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Artigos sobre UX</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Conecte-se comigo no Linkedin</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            UX Unicórnio é uma iniciativa Inkmustache.
+            </div>
+          </div>
+        </footer>
 </html>
