--- a/site Uxunicornio/index.html
+++ b/site Uxunicornio/index.html
@@ -52,7 +52,8 @@
 		<div class="center-align"><i class="material-icons">keyboard_arrow_down</i></div>
 	</section>
 
-	<section class="cidades">
+	<section class="cidades container">
+		<div class="cidades-titulo"><h4>Na sua cidade, presencial e feito para você.</h4> </div>
 		<div class="row">
 	    	<div class="col s12 m6 xl13">
 	     		<div class="card">
@@ -64,7 +65,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#" class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -79,7 +80,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -94,7 +95,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -109,7 +110,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -124,7 +125,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -139,7 +140,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -154,7 +155,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -169,7 +170,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -184,7 +185,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -199,7 +200,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -214,7 +215,7 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
@@ -229,60 +230,63 @@
 	          			<p>Valor</p>
 	        		</div>
 	        		<div class="card-action">
-	          			<a href="#">Lista de Espera</a>
+	          			<a href="#"class="btn waves-effect waves-light">Lista de Espera</a>
 	        		</div>
 	      		</div>
 	    	</div>
 	  	</div>
 	</section>
 	<section class="ementa">
-		<div>O que você vai aprender em 2 dias intensos</div>
-		<div>Esse curso de 16h tem conteúdos inéditos e tudo que há de melhor em todos os meus 10 cursos online somados! É mitológico!</div>
-		<div>
-			<div class = "row" >
-				<div class="col s12 m6 l6 xl6 ">
-					<div> Estratégia de Negócio com foco no Usúario</div>
-					<ul>
-						<li>Emplacar UX na sua Empresa</li>
-						<li>Explorar problemas</li>
-						<li>Especializar-se no seu negócio</li>
-						<li>Aproximar-se de Stakeholders</li>
-						<li>Definir metas e medir resultados</li>
-					</ul>
+		<div class="container">
 
-					<div> Design de Interfaces(UI)</div>
-					<ul>
-						<li>Organizar Grids</li>
-						<li>Entender e definir Hierarquia Visual</li>
-						<li>Criar paletas de cores com foco no funcional</li>
-						<li>Escolher tipografias com boa legitibidade e leiturabilidade</li>
-						<li>Criar botões que ajudam os usuários</li>
-						<li>Criar formulários mais fáceis de usar</li>
-					</ul>
-				</div>
-				<div class="col s12 m6 l6 xl6 ">
-					<div> Desing de Experiência de usuário(UX) </div>
-					<ul>
-						<li>Validar suposições com Usuários</li>
-						<li>Estudar as Jornadas e Contextos</li>
-						<li>Mapear seus potenciais usuários</li>
-						<li>Priorizar Alternativas de Soluções</li>
-						<li>Prototipar e testar com Usuários</li>
-					</ul>
+			<div><h4>O que você vai aprender em 2 dias intensos</h4></div>
+			<div><p>Esse curso de 16h tem conteúdos inéditos e tudo que há de melhor em todos os meus 10 cursos online somados! É mitológico!</p></div>
+			<div class="ementa-conteudo">
+				<div class = "row" >
+					<div class="col s12 m6 l6 xl6 ">
+						<div> Estratégia de Negócio com foco no Usúario</div>
+						<ul>
+							<li>Emplacar UX na sua Empresa</li>
+							<li>Explorar problemas</li>
+							<li>Especializar-se no seu negócio</li>
+							<li>Aproximar-se de Stakeholders</li>
+							<li>Definir metas e medir resultados</li>
+						</ul>
 
-					<div> Gestão de Produto e Metodologias Ágeis </div>
-					<ul>
-						<li>Trabalhar em equipes ágeis</li>
-						<li>Trabalhar com Ux no SCRUM - ritos e papéis</li>
-						<li>Definir suposições e testar hipóteses LEAN UX</li>
-						<li>Gerenciar roadmap de produto</li>
-						<li>Organizar e acompanhar projetos</li>
-					</ul>
+						<div> Design de Interfaces(UI)</div>
+						<ul>
+							<li>Organizar Grids</li>
+							<li>Entender e definir Hierarquia Visual</li>
+							<li>Criar paletas de cores com foco no funcional</li>
+							<li>Escolher tipografias com boa legitibidade e leiturabilidade</li>
+							<li>Criar botões que ajudam os usuários</li>
+							<li>Criar formulários mais fáceis de usar</li>
+						</ul>
+					</div>
+					<div class="col s12 m6 l6 xl6 ">
+						<div> Desing de Experiência de usuário(UX) </div>
+						<ul>
+							<li>Validar suposições com Usuários</li>
+							<li>Estudar as Jornadas e Contextos</li>
+							<li>Mapear seus potenciais usuários</li>
+							<li>Priorizar Alternativas de Soluções</li>
+							<li>Prototipar e testar com Usuários</li>
+						</ul>
+
+						<div> Gestão de Produto e Metodologias Ágeis </div>
+						<ul>
+							<li>Trabalhar em equipes ágeis</li>
+							<li>Trabalhar com Ux no SCRUM - ritos e papéis</li>
+							<li>Definir suposições e testar hipóteses LEAN UX</li>
+							<li>Gerenciar roadmap de produto</li>
+							<li>Organizar e acompanhar projetos</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="estatistica">
+	<section class="estatistica container center-align">
 		<div class = "row" >
 			<div class="col s12 m4 l4 xl4 ">
 				<div> +40.000 </div>
@@ -296,7 +300,7 @@
 
 			<div class="col s12 m4 l4 xl4 ">
 				<div> +8000 </div>
-				<div>Avaliações 5</div>					
+				<div>Avaliações 5<i class=material-icons>star</i></div>					
 			</div>
 
 		</div>				
@@ -314,20 +318,20 @@
               <div class="col l4 s12">
                 <h5 class="white-text">Os melhores cursos online</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Experiência do Usuário nos Negócios(11h)</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Design de Interfaces com o foco em UX (32h)</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Usabilidade com Hotjar(2h)</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Prototipação e Styleguides em Figma (6h)</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Ver todos os cursos</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#! "><i class=material-icons>open_in_new</i>Experiência do Usuário nos Negócios(11h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Design de Interfaces com o foco em UX (32h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Usabilidade com Hotjar(2h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Prototipação e Styleguides em Figma (6h)</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Ver todos os cursos</a></li>
                 </ul>
               </div>
               <div class="col l3 s12">
                 <h5 class="white-text">Conteúdo grátis</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Insta e Stories @uxunicornio</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Youtube UX Unicórnio</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Artigos sobre UX</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"><i>open_in_new</i>Conecte-se comigo no Linkedin</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Insta e Stories @uxunicornio</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Youtube UX Unicórnio</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-icons>open_in_new</i>Artigos sobre UX</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><i class=material-iconss>open_in_new</i>Conecte-se comigo no Linkedin</a></li>
                 </ul>
               </div>
             </div>
